chrome/user-hover-sidebar.css
/*
====================================================
Sidebery add-on autohide
from https://www.reddit.com/r/FirefoxCSS/comments/yx99mj/autohide_sidebar_css_stopped_working_after/iwodcgm/
====================================================
*/

:root {
  --sidebar-min: 42px;  /* collapsed sidebar width */
  --sidebar-max: 250px; /* expanded sidebar width */
  --hover-delay: 1s;     /* time between mouse enter and expand */
  --hover-speed: 0.1s;  /* duration of expand animation */
}

#sidebar-box {
  position: relative !important;
  overflow-x: hidden !important;
  min-width: var(--sidebar-min) !important;
  max-width: var(--sidebar-min) !important;
  border-right: 1px solid var(--sidebar-border-color);
  z-index: 1;
  transition: all var(--hover-speed);
  transition-delay: 0;
}

#sidebar-box:hover {
  margin-right: calc(
    calc(var(--sidebar-max) - var(--sidebar-min)) * -1
  ) !important;
  min-width: var(--sidebar-max) !important;
  transition-delay: var(--hover-delay);
}

#sidebar-box:hover #sidebar-header {
  min-width: var(--sidebar-max) !important;
  /*max-width: var(--sidebar-max) !important;*/
}

/* hide when fullscreen */
#main-window[inFullscreen] #sidebar-box {
  display: none !important;
  width: 0px !important;
}

